# Yux_FHE_HElib

./: .gitignore  CMakeLists.txt  README.md
symmetric/: Yux-F_p.cpp  Yux-F_p.h  Yux-dagger-F_p.cpp  Yux-dagger-F_p.h  Yux_F_p.cpp  spn-multi.cpp
tests/: CMakeLists.txt  random-plain.txt  test-blockcipher-F_p.cpp  test-blockcipher-dagger-F_p.cpp  test-blockcipher.cpp  test-expand16.cpp  test-transciphering-F_p-1.cpp  test-transciphering-F_p-16.cpp  test-transciphering-dagger-F_p-16.cpp  test-transciphering1.cpp  test-transciphering16.cpp  test-transciphering4.cpp
transciphering/: expand.cpp  params.h  transciphering-F_p-1.cpp  transciphering-F_p-1.h  transciphering-F_p-16.cpp  transciphering-F_p-16.h  transciphering-dagger-F_p-16.cpp  transciphering-dagger-F_p-16.h  transciphering1.cpp  transciphering1.h  transciphering16.cpp  transciphering16.h  transciphering4.cpp  transciphering4.h  utils.cpp  utils.h
